Modifications for version 2.9.0
git-svn-id: svn://svn.code.sf.net/p/ibcontroller/code@3 10f6a998-297e-40aa-8040-b74e0a9b9524